# eece5640-fft

./: .gitignore  CMakeLists.txt  README.md  build.sh
results/: exp1_p100_dns.csv  exp1_p100_oracle.csv  exp1_p100_synthetic.csv  exp1_v100_dns.csv  exp1_v100_oracle.csv  exp1_v100_synthetic.csv  exp2_p100.csv  exp2_v100.csv  exp3_thread_scaling_p100.csv  exp3_thread_scaling_v100.csv
scripts/: build_fftw3.sh  download_dns.sh  download_oracle.sh  plot_results.py  profile_cpu.sh  profile_gpu.sh  submit_p100.sh  submit_thread_scaling.sh  submit_v100.sh
src/: main.cpp  verify.cu  verify.cuh
src/common/: result.hpp  timer.hpp  types.hpp
src/cpu/: fft_own.cpp  fft_own.hpp  fftw_bench.cpp  fftw_bench.hpp  mkl_bench.cpp  mkl_bench.hpp
src/data/: audio_reader.cpp  audio_reader.hpp  sigmf_reader.cpp  sigmf_reader.hpp  synthetic_gen.hpp
src/gpu/: cufft_bench.cu  cufft_bench.cuh  fft_own.cu  fft_own.cuh
